# pdf-ai-back

./: .env.sample  .gitignore  Cargo.toml  docker-compose.override.yml
src/: main.rs
src/api/: document.rs  mod.rs
src/repository/: chatgpt.rs  data.rs  mod.rs  utils.rs
